--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "~4.16.1",
     "futoin-ipset": "^1.3.5",
     "mongoose": "^5.10.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pac-resolver": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
