--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pacserver",
   "version": "1.0.0",
   "private": true,
+  "license" : "MIT",
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www"
