--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pacserver",
   "version": "1.0.0",
   "private": true,
-  "license" : "MIT",
+  "license": "MIT",
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www"
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "futoin-ipset": "^1.3.5",
     "mongoose": "^5.10.11",
