--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "futoin-ipset": "^1.3.5",
     "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
-    "pac-resolver": "^4.1.0"
+    "pac-resolver": "^4.1.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
